# serverless-github-provisioner

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-lambda.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_FINAL.md  ARCHITECTURE_SECONDARY.md  AWS_RESOURCES_INVENTORY.md  AWS_SERVERLESS_SETUP_GUIDE.md  CREDENTIALS_SETUP.md  JIRA_CLIENT_TESTING.md  JIRA_TICKET_FIELDS.md  JIRA_TICKET_JSON_TEMPLATE.md  JIRA_TICKET_TRANSITIONS.md  NOTIFICATION_INTEGRATION_GUIDE.md  NOTIFICATION_QUICK_START.md  PHASE1_SUCCESS_TRANSITIONS_IMPLEMENTATION.md  PROJECT_STATUS.md  REQUIREMENTS.md  TESTING_PLAN.md  TODO.txt  WEBHOOK_FAILURE_HANDLING.md  default-branch-change-architecture.md  default-branch-change-conditional-form-architecture.md  default-branch-change-hybrid-architecture.md
infra/: .gitignore  README.md
infra/environment/test/: main.tf  out.json  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/modules/dlq-handler/: lambda.tf  main.tf  outputs.tf  variables.tf
infra/modules/lambda-layer/: .gitignore  (+4 more)
scripts/: check-lambda-logs.sh  run_jira_tests.sh  test-flow.sh  verify-deployment.sh
scripts/dev/: GitHub_Automation_Presentation.pptx  JIRA_TICKET_TEMPLATE.json  create_presentation.py  fetch_ticket.py  fetch_ticket_detailed.py
scripts/manual_tests/: test_check_repository_exists.py  test_client_manager_caching.py  test_create_repository_cases.py  test_custom_field_extraction.py  test_e2e_complete.py  test_validators_quick.py  test_webhook_failure.py
src/: __init__.py  config.py
src/business/: __init__.py  message_parser.py  validators.py  workflow_processor.py
src/handlers/: __init__.py  dlq_handler.py  github_handler.py
src/integrations/: __init__.py
src/observability/: __init__.py  cloudwatch_metrics.py  logging_core.py  logging_utils.py  metrics_collector.py
src/shared/: __init__.py  error_formatting.py  exceptions.py
tests/: __init__.py  test_jira_client.py
(+18 files in other folders)
